<resources>
    <string name="app_name">时时彩开奖宝典</string>
    <string name="splash_text_top">时时彩开奖</string>
    <string name="splash_text_bottom">分析计划宝典 </string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">关于</string>
    <string name="double_color_50">双色球最新50期分布图</string>
    <string name="double_color_info">双色球知识</string>
    <string name="double_color_handlle">双色球分析</string>
    <string name="double_color_rules">双色球规则</string>
    <string name="double_color_happy">快乐星期天奖</string>
    <string name="title_qcssc">重庆时时彩</string>
    <string name="title_dlt">大乐透</string>

    <string name="string_know">\t\t\t\t\t\t“双色球”福利彩票的发行目的
　　“双色球”：是中国福利彩票发行管理中心最新推出的一种“乐透型”彩票。是目前财政部、民政部批准唯一在全国范围内联合发行销售的电脑福利彩票。

　　为适应社会福利、社会救助、社会保障事业的发展需求，更多地筹集社会福利基金，实现福利彩票“扶老、助残、救孤、济困”的宗旨。
中奖查询方法
　　“双色球”正式发行后，除第一期发行时间为一周外，以后每周销售两期，周四、周日开奖。开奖信息将由中国福利彩票发行管理中心通过电视开奖节目、彩票网站、彩票报刊、短信及声讯服务等不同方式向社会广泛发布。

　　已定开奖媒体及时间如下：

　　1、旅游卫视台：除每周四、周日21：30-21：35播出开奖节目外，周五、周一早8：00起，逢整点将以字幕配画外音形式重播中奖号码，同时还将增加播出开奖结果（连播4次）；

　　2、中央人民广播电台（一套节目）：每周四、周日22:06---22：08首播，周五、周一10:06----10:08重播。播出内容包括中奖号码及开奖结果（各奖级中奖注数、大奖开出省市、“快乐星期天”特别奖余额等等）；

　　3、公益时报《中华彩票》：周五、周一刊出；

　　4、双色球网（www.17500.cn）：每周四、周日21：35以后；

　　5、手机短信服务(发送8至9588)：每周四、周日21：35以后；

　　6、声讯台（随后开通）：每周四、周日21：35以后； 各省彩票发行机构在旅游卫视开奖节目播出后，也将分别在各地风采电脑彩票开奖节目以及其它主要媒体上，采用口播、字幕、公告栏等形式广泛发布开奖信息，同时，投注站也将及时张贴"双色球"开奖公告。

特点介绍
崭新玩法　--　

　　“双色球”电脑福利彩票借助国外"强力球"玩法的成功经验和轰动效应，在我国首次采用两个号码区投注，即从"红色球号码区"的1-33个号码中选择6个号码，从"蓝色球号码区"的1-16个号码中选择1个号码组成一注进行投注。该玩法趣味性强，既有单式投注，又有三种复式投注方式可选择；大奖奖额高，中500万的几率大；小奖个数多，中一个蓝色球号码就能有奖，总中奖面宽达6.7%。

全 国 联 销　--　

　　“双色球”电脑福利彩票首批在全国20多个 省市销售，以弥补一些地方销售规模小、奖池积累慢、出大奖难的不足。

统 一 奖 池　--　“双色球”电脑福利彩票在全国设置一个奖池供各地共享，奖池规模达、积累快，出大奖的几率高。

统 一 开 奖　--　“双色球”电脑福利彩票每周开奖两次，开奖节目每周四、周日21：30-21：35在旅游卫视台播出，权威性强，覆盖面广，透明度高。

　　“双色球”开奖信息发布渠道 "双色球"正式发行后，除第一期发行时间为一周外，以后每周销售两期，周四、周日开奖。开奖信息将由中国福利彩票发行管理中心通过电视开奖节目、彩票网站、彩票报刊、短信及声讯服务等不同方式向社会广泛发布。

注意事项
　　“双色球”彩票兑奖当期有效。每期开奖次日起兑奖，期限为30天，逾期未兑视为弃奖。

　　中奖人需提交完整的兑奖彩票，因玷污、损坏等原因造成不能正确识别的，不能兑奖。

　　按国家有关规定，单注奖金额超过一万元者，须交纳个人偶然所得税。

投注方法
单 式 投 注　--　

　　从红色球号码中选择6个号码，从蓝色球号码中选择1个号码，组合为一注投注号码投注，每注2元。

复式投注有三种：

红色球号码复式　--　
　　从红色号码中选择7--20个号码，从蓝色号码中选择1个号码，组合成多注投注号码投注（7至38760注）。

蓝色球号码复式　--　
　　从红色号码中选择6个号码，从蓝色号码中选择6--12个号码，组合成多注投注号码投注（6至12注）。

全复式 --
　　从红色号码中选择7--20个号码，从蓝色号码中选择6--12个号码，组合成多注投注号码投注（42至465120注）。

兑奖办法
　　一等奖中奖者，需持中奖彩票和本人有效身份证明，在兑奖期限内到各省（区、市）福利彩票发行中心验证、登记和兑奖。其他奖级的兑奖办法由各省（区、市）自行规定并公布。

　　“双色球”彩票兑奖当期有效。每期开奖次日起，兑奖期限为30天，逾期未兑奖者视为弃奖，弃奖奖金进入调节基金。

　　中奖人须提交完整的兑奖彩票，因玷污、损坏等原因造成不能正确识别的，不能兑奖。

　　一等奖中奖者，需持中奖彩票和本人有效身份证明，在兑奖期限内到各地省中心验证、登记和兑奖。其他奖级的兑奖办法由省中心规定并公布。

　　按国家有关规定，单注奖金额超过一万元者，须缴纳个人偶然所得税</string>

    <string name="string_rules">总 则\n
第一条 本规则依据财政部《彩票发行与销售管理暂行规定》和《中国福利彩票（电脑型）联合发行与销售管理暂行办法》（以下简称《管理办法》）制定。
第二条 中国福利彩票“双色球”（以下简称“双色球”）是一种联合发行的“乐透型”福利彩票。采用计算机网络系统发行销售，定期电视开奖。
第三条 “双色球”由中国福利彩票发行管理中心（以下简称中彩中心）统一组织发行，在全国销售。
第四条 参与“双色球”销售的省级福利彩票发行中心（以下简称省中心）在中福彩中心的直接领导下，负责对本地区的“双色球”销售活动实施具体的组织和管理。
第五条 “双色球”彩票实行自愿购买，凡购买者均被视为同意并遵守本规则。

游 戏

第六条 “ 双色球”彩票投注区分为红色球号码区和蓝色球号码区。
第七条 “双色球”每注投注号码由6个红色球号码和1个蓝色球号码组成。红色球号码从1—33中选择；蓝色球号码从1—16中选择。
第八条 “双色球”每注2元。
第九条 “双色球”采取全国统一奖池计奖。
第十条 “双色球”每周销售两期，期号以开奖日界定，按日
历年度编排。

 投 注

第十一条 “双色球”的投注方法可分为自选号码投注和机选号码投注；其投注方式有单式投注和复式投注。
第十二条 自选号码投注是指投注者自行选定投注号码的投注。
第十三条 机选号码投注是指由投注机为投注者随机产生投注号码的投注。
第十四条 单式投注是从红色球号码中选择6个号码，从蓝色球号码中选择1个号码，组合为一注投注号码的投注。
第十五条 复式投注有三种：
（一）红色球号码复式：从红色球号码中选择7-20个号码，从蓝色球号码中选择1个号码，组合成多注投注号码的投注。
（二）蓝色球号码复式：从红色球号码中选择6个号码,从蓝色球号码中选择2-16个号码，组合成多注投注号码的投注。
（三）全复式：从红色球号码中选择7-20个号码，从蓝色球号码中选择2-16号码，组合成多注投注号码的投注。
 设 奖

第十六条 “双色球”设奖奖金为销售总额的50%，其中当期奖金为销售总额的49%，调节基金为销售总额的1%。
第十七条 “双色球”奖级设置分为高等奖和低等奖。一等奖和二等奖为高等奖，三至六等奖为低等奖。高等奖采用浮动设奖，低等奖采用固定设奖。当期奖金减去当期低等奖奖金，为当期高等奖奖金。设奖如下：
一等奖：奖金总额为当期高等奖奖金的70%与奖池中积累的高等奖奖金之和；
二等奖：奖金总额为当期高等奖奖金的30%；
三等奖：单注奖金额固定为3000元；
四等奖：单注奖金额固定为200元；
五等奖：单注奖金额固定为10元；
六等奖：单注奖金额固定为5元；
第十八条 根据国家有关规定，“双色球”彩票单注奖金封顶
的最高限额为500万元。
第十九条 “双色球”设立奖池。奖池资金来源：未中出
的高等奖奖金和超出单注封顶限额部分的奖金。奖池资金计入下期一等奖。
第二十条 当一等奖的单注奖额低于二等奖的单注奖额时，将一、二等奖的奖金相加，由一、二等奖中奖者平分；当一、二等奖的单注奖额低于三等奖奖额时，补足三等奖奖额。当期奖金不足部分由调节基金补充，调节基金不足时，从发行费列支。
开 奖

第二十一条 “双色球”由中福彩中心统一开奖，每周开奖两次。开奖前，省中心将当期投注的全部数据刻入不可改写的光盘，作为查验的依据。
第二十二条 “双色球”通过摇奖器确定中奖号码。摇奖时先摇出6个红色球号码，再摇出1个蓝色球号码，摇出的红色球号码按从小到大的顺序和蓝色球号码一起公布。
第二十三条 开奖公告在各地主要媒体上公布，并在各地投注站张贴。
第二十四条 “双色球”的开奖结果以中福彩中心公布的开奖公
告为准。
 中 奖

第二十五条 “双色球”彩票以投注者所选单注投注号码（复式投注按所覆盖的单注计）与当期开出中奖号码相符的球色和个数确定中奖等级：
一等奖：7个号码相符（6个红色球号码和1个蓝色球号码）（红色球号码顺序不限，下同）；
二等奖：6个红色球号码相符；
三等奖：5个红色球号码和1个蓝色球号码相符；
四等奖：5个红色球号码或4个红色球号码和1个蓝色球号码相符；
五等奖：4个红色球号码或3个红色球号码和1个蓝色球号码相符；
六等奖：1个蓝色球号码相符（有无红色球号码相符均可）。
第二十六条 一等奖和二等奖中奖者按各奖级的中奖注数均分该奖级的奖金；三至六等奖按各奖级的单注固定奖额获得奖金。
第二十七条 当期每注投注号码只有一次中奖机会，不能兼中兼得（另行设奖按设奖规定执行）。

 兑 奖

第二十八条 “双色球”彩票兑奖当期有效。每期开奖次日起，兑奖期限为30天，逾期未兑奖者视为弃奖，弃奖奖金进入调节基金。
第二十九条 中奖人须提交完整的兑奖彩票，因玷污、损坏等
原因造成不能正确识别的，不能兑奖。
第三十条 一等奖中奖者，需持中奖彩票和本人有效身份证
明，在兑奖期限内到各地省中心验证、登记和兑奖。其它奖级的兑奖办法由省中心规定并公布。
第三十一条 按国家有关规定，单注奖金额超过一万元者，须缴纳个人偶然所得税。
 附 则

第三十二条 本规则未尽事宜，均按《管理办法》和有关规定执行。
第三十三条 本规则由中国福利彩票发行管理中心负责解释。
第三十四条 本规则自发布之日起施行。</string>

    <string name="string_happy">为使“快乐星期天”促销措施便于操作并能顺利实施，制定本办法。

　　一、设奖：“快乐星期天”是在“双色球”发行的初始阶段，由中彩中心投入200万元设立的一种特别奖，凡每周日开出的四等奖（中5+0），又中开出的第二个蓝色球号码者，除领取200元四等奖外，还可以另获3000元特别奖奖金。

　　二、开奖：每周日开奖时，在开出正常6个红色球号码和1个蓝色球号码的基础上，再摇出1个蓝色球号码，第二个蓝色球号码为“快乐星期天”特别奖专用。

　　三、中奖：凡当期四等奖获得者，若其选择的蓝色球号码中了当期第二个蓝色球号码，即为“快乐星期天”特别奖中奖者。该奖与原四等奖（中5+0）兼中兼得。

　　四、兑奖：“快乐星期天”特别奖中奖者，到所在地（市）级福利彩票发行中心（管理站）凭中奖彩票领取3000元特别奖（发奖时在彩票背面签“特别奖已付”，加盖财务章，并留复印件为付款凭据），然后到购票投注站兑取四等奖金200元。

　　五、实施时间：从“双色球”发行开始，200万元派发完毕自动终止。

　　六、本办法由中国福利彩票发行管理中心负责解释。

　　“快乐星期天”活动的举办，给原本只能得到200元奖金的四等奖获得者（中5+0）提供了一个中取3000元的机会。</string>


    <string name="title_activity_double_ball_handle">DoubleBallHandle</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_double_ball_rules">DoubleBallRules</string>
    <string name="title_activity_double_ball_happy">DoubleBallHappy</string>
    <string name="title_activity_web_qcssc">WebQCssc</string>
    <string name="title_activity_web_dlt">WebDLT</string>
</resources>
