<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@mipmap/ball"
            android:title="@string/double_color_50"/>
        <item
            android:id="@+id/nav_dlt"
            android:icon="@mipmap/ball"
            android:title="@string/title_dlt"/>
        <item
            android:id="@+id/nav_gallery"
            android:icon="@mipmap/ball"
            android:title="@string/double_color_info"/>
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@mipmap/ball"
            android:title="@string/double_color_handlle"/>
        <item
            android:id="@+id/nav_rules"
            android:icon="@mipmap/ball"
            android:title="@string/double_color_rules"/>
        <item
            android:id="@+id/nav_happy"
            android:icon="@mipmap/ball"
            android:title="@string/double_color_happy"/>
    </group>


</menu>
